src/objects/Mogli_SMS__Incoming_SMS__e.object
<CustomObject>
    <fields>
        <fullName>Mogli_SMS__Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Batch_Group_ID__c</fullName>
        <label>Batch Group ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Campaign__c</fullName>
        <label>Campaign</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Contact__c</fullName>
        <label>Contact</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Created_By__c</fullName>
        <label>Created By</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Debug__c</fullName>
        <label>Debug</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Direction__c</fullName>
        <label>Direction</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Gateway__c</fullName>
        <label>Gateway</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Is_Batch_Transaction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Batch Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Last_Modified_By__c</fullName>
        <label>Last Modified By</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Lead__c</fullName>
        <label>Lead</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Message_SID__c</fullName>
        <label>Message SID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Offline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Opportunity__c</fullName>
        <label>Opportunity</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Owner__c</fullName>
        <label>Owner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Phone_Number__c</fullName>
        <label>Phone Number</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__SMS_Id__c</fullName>
        <label>SMS Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Scheduled_Delivery__c</fullName>
        <label>Scheduled Delivery</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Status__c</fullName>
        <label>Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Incoming SMS</label>
    <pluralLabel>Incoming SMSs</pluralLabel>
</CustomObject>